--- a/src/views/signup.hbs
+++ b/src/views/signup.hbs
@@ -11,7 +11,7 @@
                 id ="user-register-form"
                 action="/signup"
                 method="POST"
-                enctype="multipart/form-data"
+                enctype="multipart-data"
               >
                 <div class="d-flex justify-content-between">
                   <div class="register-intro">
