added note to add establishment

--- a/src/views/admin.hbs
+++ b/src/views/admin.hbs
@@ -63,6 +63,10 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <div class="mb-3 row">
+                                           *If tag is more than 1 word, use "-" instead of spaces* <br>
+                                           *e.g. Fast-Food instead of Fast Food*
+                                    </div>
                                 </div>
                             </div>
                             <div class="mb-3 row">
