--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -5,26 +5,30 @@
     <div class="dropdown mb-3">
         {{> sortFilter}}
     </div>
-    <div class="row gy-5">
+    {{!-- <div class="row gy-5"> --}}
+        <ul class="row gy-5" id="id01" style="list-style-type: none;">
         {{#each establishments}}
-            <div class="col-lg-3 {{this.rating}} {{this.tag1}} {{this.tag2}}">
-                <a href="/{{this.displayedName}}">
-                    <div class="content">
-                        <div class="img-parent"><img src="{{this.profilePicture}}" alt=""></div>
-                        <div class="mt-3">
-                            <div class="d-flex justify-content-between">
-                                <span class="bold">{{this.displayedName}}</span>
-                                <div>
-                                    <i class="fas fa-star me-2"></i><span class="regular">{{this.rating}}</span>
+            <li class="col-lg-3 {{this.rating}} {{this.tag1}} {{this.tag2}}" style="list-style-type: none;">
+                {{!-- <div class="col-lg-3 {{this.rating}} {{this.tag1}} {{this.tag2}}"> --}}
+                    <a class="{{this.rating}}" href="/{{this.displayedName}}">
+                        <div class="content">
+                            <div class="img-parent"><img src="{{this.profilePicture}}" alt=""></div>
+                            <div class="mt-3">
+                                <div class="d-flex justify-content-between">
+                                    <span class="bold">{{this.displayedName}}</span>
+                                    <div>
+                                        <i class="fas fa-star me-2"></i><span class="regular">{{this.rating}}</span>
+                                    </div>
                                 </div>
+                                <span class="subtext">{{this.tag1}}<br>{{this.tag2}}</span>
                             </div>
-                            <span class="subtext">{{this.tag1}}<br>{{this.tag2}}</span>
                         </div>
-                    </div>
-                </a>
-            </div>
+                    </a>
+                {{!-- </div> --}}
+            </li>
         {{/each}}
-    </div>
+        </u>
+    {{!-- </div> --}}
 </div>
 <footer>
 </footer>
