--- a/src/views/partials/sortFilterEstablishment.hbs
+++ b/src/views/partials/sortFilterEstablishment.hbs
@@ -48,5 +48,8 @@
             </button>
         </li>
     </ul>
+    <button id="Clear Button" class="btn btn-outline-success" type="button" aria-expanded="false" onClick="window.location.reload();">
+        Clear Sort and Filters
+    </button>
     <!--EDIT BOOKMARK END-->
 </form>
