Sort and filter MERGE (#4)
* + sort and filter buttons

modify as you like

* minor update to mongodb version

* preliminary changes

* Update index.hbs

* Update index.hbs

* Made changes to frontend

* add backend file (empty) for establishment page filter

* removed code from home-filter

* prototype filter

* added note to add establishment

* updated tag dropdown

dropdowns are now dynamic and show tags based on what's on the database

* added ratings filter on home page

* review filter on establishment page added

Let's you only display reviews with specific scores

* added order sort to home page

* removed comments

* removed comments

* prototype sort for establishment page

* review order for establishment page

* added clear filters

clear filter will refresh the page, returning it into it's default state

* removed prototype code

* multi tag filter updated

* updated hidden secondary tag functionality

* removed unnecessary code

* changed comments

* fixed numerous bugs

* automated tests

---------

Co-authored-by: Joshua Corpuz <104405536+ZyWick@users.noreply.github.com>
Co-authored-by: Ryan Nicholas <nichotaino@gmail.com>

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -25,3 +25,10 @@ a {
   text-decoration: inherit;
   color: inherit;
 }
+
+/*EDIT BOOKMARK START*/
+/* ul {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+} */
+/*EDIT BOOKMARK END*/
