--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -2,10 +2,13 @@
 
 <div class="container cards">
     <h3 class="pt-4 pb-2">Food establishments near Taft</h3>
-    <div class="row gy-5">
+    <div class="dropdown mb-3">
+        {{> sortFilter}}
+    </div>
+        <ul class="row gy-5" style="list-style-type: none;">
         {{#each establishments}}
-            <div class="col-lg-3">
-                <a href="/{{this.displayedName}}">
+            <li class="col-lg-3 {{this.rating}} {{this.tag1}} {{this.tag2}}" style="list-style-type: none;">
+                <a class="{{this.rating}}" href="/{{this.displayedName}}">
                     <div class="content">
                         <div class="img-parent"><img src="{{this.profilePicture}}" alt=""></div>
                         <div class="mt-3">
@@ -19,9 +22,9 @@
                         </div>
                     </div>
                 </a>
-            </div>
+            </li>
         {{/each}}
-    </div>
+        </u>
 </div>
 <footer>
 </footer>
