--- a/src/views/partials/review.hbs
+++ b/src/views/partials/review.hbs
@@ -56,88 +56,90 @@
 </div>
 
 {{else}}
-<div class="card mb-3 REVIEW {{#if @root.isEstab}}estab{{/if}}" id="{{this._id}}">
-    <!-- profile (req)-->
-    <div class="card-header reviewHeader flex-center">
-        <div class="user-profile flex-center">
-            <a href="{{user.link}}" class="flex-center"><img class="pfpRev img-fluid" src="{{user.profilePicture}}"
-                    alt=""></a>
-            <div class="postDeats">
-                <a class="user-link" href="{{user.link}}">{{user.username}}</a>
-                <div class=" status">{{formatDate datePosted}} {{#if edited}} • edited {{/if}} </div>
+    <div class="card mb-3 REVIEW {{#if @root.isEstab}}estab{{/if}} reviewCard {{rating}}" id="{{this._id}}">
+        <!-- profile (req)-->
+        <div class="card-header reviewHeader flex-center">
+            <div class="user-profile flex-center">
+                <a href="{{user.link}}" class="flex-center">
+                    <img class="pfpRev img-fluid" src="{{user.profilePicture}}"alt="">
+                </a>
+                <div class="postDeats">
+                    <a class="user-link" href="{{user.link}}">{{user.username}}</a>
+                    <div class=" status">{{formatDate datePosted}} {{#if edited}} • edited {{/if}} </div>
+                </div>
+            </div>
+            <div>
+                <!--Review Rating-->
+                <h5 class="d-inline-block">
+                    <span class="ratingz">{{rating}}.0</span>
+                    <meter class="average-rating mang-inasal d-inline-block" min="0" style="--percent: {{starr rating}}%"
+                        max="5"></meter>
+                </h5>
             </div>
         </div>
-        <div>
-            <h5 class="d-inline-block">
-                <span class="ratingz">{{rating}}.0</span>
-                <meter class="average-rating mang-inasal d-inline-block" min="0" style="--percent: {{starr rating}}%"
-                    max="5"></meter>
-            </h5>
+
+        <!-- review text (req)-->
+        <div class="card-body reviewBody">
+            <!-- UNIQUE ID PER REVIEW -->
+            <h6 class="card-title reviewTitle">{{title}}</h6>
+            <p class=" reviewtext truncate card-text">
+                {{content}}
+            </p>
+
+            <!-- additional media  -->
+            {{#if nMedia}}
+            {{> revMedia this}}
+            {{/if}}
+
+            <!-- review interaction icons (e.g. comment, upvote, downvote etc.)-->
+            <div class="flex-center iconBox">
+                {{#if @root.isAdmin}}
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-ban text-danger remove" viewBox="0 0 16 16">
+                <path d="M15 8a6.97 6.97 0 0 0-1.71-4.584l-9.874 9.875A7 7 0 0 0 15 8M2.71 12.584l9.874-9.875a7 7 0 0 0-9.874 9.874ZM16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0"></path>
+                </svg>
+                {{/if}}
+                <span class=" chat chatbg "></span>
+                <span class=" cNum card-text">{{length children}}</span>
+                <span class=" up {{#if (idIn  @root.user._id likes)}}upbgfill{{else}}upbg{{/if}}"> </span>
+                <span class="uvote card-text">{{length likes}}</span>
+                <span class=" down {{#if (idIn  @root.user._id dislikes)}}downbgfill{{else}}downbg{{/if}}"></span>
+                <span class="dvote card-text">{{length dislikes}}</span>
+                {{#if @root.isEstab}}
+                {{#unless estabResponse}}
+                <span class="reply replybg"></span>
+                {{/unless}}
+                {{else}}
+                {{#if edit}}
+                <span class="c00000xx editRev edit-review editbg ms-3"></span>
+                <span class="del-review delbg"></span>
+                {{else}}
+                {{#if @root.THEEEUSERR}}
+                <span onclick="window.location.replace('{{user.link}}')" class="  edit-review editbg ms-3"></span>
+                <span class="del-review delbg"></span>
+                {{else}}
+                <span class="reply replybg"></span>
+                {{/if}}{{/if}}{{/if}}
+            </div>
         </div>
-    </div>
 
-    <!-- review text (req)-->
-    <div class="card-body reviewBody">
-        <!-- UNIQUE ID PER REVIEW -->
-        <h6 class="card-title reviewTitle">{{title}}</h6>
-        <p class=" reviewtext truncate card-text">
-            {{content}}
-        </p>
+        <!-- reply area (req)-->
+        <div class=" wReply card-footer collapse">
+            <form method="post" enctype="multipart/form-data">
+                <div class="form-group">
+                    <label for="text" class="form-label writeReply">Write a Reply</label>
+                    <textarea class="form-control refly" required id="{{this._id}}text" name="text" rows="3"></textarea>
+                    <button type="submit" class="{{#if @root.isEstab}}estab{{/if}} postReply btn btn-success">Post</button>
+                </div>
+            </form>
+        </div>
 
-        <!-- media  -->
-        {{#if nMedia}}
-        {{> revMedia this}}
+        <!-- establishment response (opt) -->
+        {{#if estabResponse}}
+        {{> EstabRespo estabResponse}}
         {{/if}}
 
-        <!-- icons -->
-        <div class="flex-center iconBox">
-            {{#if @root.isAdmin}}
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-ban text-danger remove" viewBox="0 0 16 16">
-            <path d="M15 8a6.97 6.97 0 0 0-1.71-4.584l-9.874 9.875A7 7 0 0 0 15 8M2.71 12.584l9.874-9.875a7 7 0 0 0-9.874 9.874ZM16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0"></path>
-            </svg>
-            {{/if}}
-            <span class=" chat chatbg "></span>
-            <span class=" cNum card-text">{{length children}}</span>
-            <span class=" up {{#if (idIn  @root.user._id likes)}}upbgfill{{else}}upbg{{/if}}"> </span>
-            <span class="uvote card-text">{{length likes}}</span>
-            <span class=" down {{#if (idIn  @root.user._id dislikes)}}downbgfill{{else}}downbg{{/if}}"></span>
-            <span class="dvote card-text">{{length dislikes}}</span>
-            {{#if @root.isEstab}}
-            {{#unless estabResponse}}
-            <span class="reply replybg"></span>
-            {{/unless}}
-            {{else}}
-            {{#if edit}}
-            <span class="c00000xx editRev edit-review editbg ms-3"></span>
-            <span class="del-review delbg"></span>
-            {{else}}
-            {{#if @root.THEEEUSERR}}
-            <span onclick="window.location.replace('{{user.link}}')" class="  edit-review editbg ms-3"></span>
-            <span class="del-review delbg"></span>
-            {{else}}
-            <span class="reply replybg"></span>
-            {{/if}}{{/if}}{{/if}}
-        </div>
+        <!--  comment section list of review-->
+        <!-- UL ID is for review // the reply will have a unique ID -->
+        {{> comment }}
     </div>
-
-    <!-- reply area (req)-->
-    <div class=" wReply card-footer collapse">
-        <form method="post" enctype="multipart/form-data">
-            <div class="form-group">
-                <label for="text" class="form-label writeReply">Write a Reply</label>
-                <textarea class="form-control refly" required id="{{this._id}}text" name="text" rows="3"></textarea>
-                <button type="submit" class="{{#if @root.isEstab}}estab{{/if}} postReply btn btn-success">Post</button>
-            </div>
-        </form>
-    </div>
-
-    <!-- establishment response (opt) -->
-    {{#if estabResponse}}
-    {{> EstabRespo estabResponse}}
-    {{/if}}
-
-    <!--  comment section list of review-->
-    <!-- UL ID is for review // the reply will have a unique ID -->
-    {{> comment }}
-</div>
 {{/if}}
