--- a/src/views/partials/review.hbs
+++ b/src/views/partials/review.hbs
@@ -91,6 +91,23 @@
             {{> revMedia this}}
             {{/if}}
 
+
+    <!-- reply area (req)-->
+    <div class=" wReply card-footer collapse">
+        <form method="post" enctype="multipart/form-data">
+            <div class="form-group">
+                <label for="text" class="form-label writeReply">Write a Reply</label>
+                <textarea class="form-control refly" required id="{{this._id}}text" name="text" rows="3"></textarea>
+                <div class="d-flex justify-content-between">
+                    <span class="d-flex align-items-center">
+                        <label type="button" class="btn btn-sm btn-outline-secondary postAnonymously" data-bs-toggle="button">
+                            <input type="checkbox" class="btn-check" name="postAnonymously"  autocomplete="off">
+                            Post Anonymously
+                        </label>
+                    </span>
+                    <button type="submit" class="{{#if @root.isEstab}}estab{{/if}} postReply btn btn-success">Post</button>
+                </div>
+
             <!-- review interaction icons (e.g. comment, upvote, downvote etc.)-->
             <div class="flex-center iconBox">
                 {{#if @root.isAdmin}}
@@ -119,6 +136,7 @@
                 {{else}}
                 <span class="reply replybg"></span>
                 {{/if}}{{/if}}{{/if}}
+
             </div>
         </div>
 
