--- a/src/views/theUser.hbs
+++ b/src/views/theUser.hbs
@@ -29,7 +29,8 @@
                 </div>
                 <form method="post" name="userControls" id="userControls">
                 <div class="form-check form-switch pt-3">
-                    <input class="form-check-input switch-success" type="checkbox" role="switch" id="userPrivacy" name="userPrivacy">
+
+                    <input class="form-check-input switch-success" type="checkbox" role="switch" id="userPrivacy" name="userPrivacy" {{#if isUserPrivate}}checked{{/if}}>
 
                     <label class="form-check-label" for="userPrivacy">Toggle Privacy</label>
                 </div>
