--- a/src/views/partials/review.hbs
+++ b/src/views/partials/review.hbs
@@ -115,6 +115,37 @@
                     <button type="submit" class="{{#if @root.isEstab}}estab{{/if}} postReply btn btn-success">Post</button>
                 </div>
 
+
+            <!-- review interaction icons (e.g. comment, upvote, downvote etc.)-->
+            <div class="flex-center iconBox">
+                {{#if @root.isAdmin}}
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-ban text-danger remove" viewBox="0 0 16 16">
+                <path d="M15 8a6.97 6.97 0 0 0-1.71-4.584l-9.874 9.875A7 7 0 0 0 15 8M2.71 12.584l9.874-9.875a7 7 0 0 0-9.874 9.874ZM16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0"></path>
+                </svg>
+                {{/if}}
+                <span class=" chat chatbg "></span>
+                <span class=" cNum card-text">{{length children}}</span>
+                <span class=" up {{#if (idIn  @root.user._id likes)}}upbgfill{{else}}upbg{{/if}}"> </span>
+                <span class="uvote card-text">{{length likes}}</span>
+                <span class=" down {{#if (idIn  @root.user._id dislikes)}}downbgfill{{else}}downbg{{/if}}"></span>
+                <span class="dvote card-text">{{length dislikes}}</span>
+                {{#if @root.isEstab}}
+                {{#unless estabResponse}}
+                <span class="reply replybg"></span>
+                {{/unless}}
+                {{else}}
+                {{#if edit}}
+                <span class="c00000xx editRev edit-review editbg ms-3"></span>
+                <span class="del-review delbg"></span>
+                {{else}}
+                {{#if @root.THEEEUSERR}}
+                <span onclick="window.location.replace('{{user.link}}')" class="  edit-review editbg ms-3"></span>
+                <span class="del-review delbg"></span>
+                {{else}}
+                <span class="reply replybg"></span>
+                {{/if}}{{/if}}{{/if}}
+
+
             </div>
         </div>
 
