--- a/src/views/partials/review.hbs
+++ b/src/views/partials/review.hbs
@@ -105,7 +105,16 @@
             <div class="form-group">
                 <label for="text" class="form-label writeReply">Write a Reply</label>
                 <textarea class="form-control refly" required id="{{this._id}}text" name="text" rows="3"></textarea>
-                <button type="submit" class="{{#if @root.isEstab}}estab{{/if}} postReply btn btn-success">Post</button>
+                <div class="d-flex justify-content-between">
+                    <span class="d-flex align-items-center">
+                        <label type="button" class="btn btn-sm btn-outline-secondary postAnonymously" data-bs-toggle="button">
+                            <input type="checkbox" class="btn-check" name="postAnonymously"  autocomplete="off">
+                            Post Anonymously
+                        </label>
+                    </span>
+                    <button type="submit" class="{{#if @root.isEstab}}estab{{/if}} postReply btn btn-success">Post</button>
+                </div>
+
             </div>
         </div>
 
